--- a/build.xml
+++ b/build.xml
@@ -14,9 +14,10 @@
     <!-- Alvo para compilar o código-fonte -->
     <target name="compile" depends="clean">
         <mkdir dir="${classes.dir}"/>
+        <mkdir dir="${src.dir}"/>
         <javac srcdir="${src.dir}" destdir="${classes.dir}" includeantruntime="false"/>
-        <antcall target="create-empty-src-directory"/>
     </target>
+
 
     <!-- Alvo para executar testes -->
     <target name="test" depends="compile">
